feat: complete ordering flow with cart, size selection, and business hours